Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46415

qquickviewcomparison example crashes when using EGL and Mesa (Intel)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.5.0 RC
    • 5.5.0 Beta
    • Quick: Widget
    • None

      We are using surfaceless contexts for QOffscreenSurface on EGL , when available (new in 5.5), and so calling OpenGL functions relying on the draw/read framebuffer with FBO 0 bound is undefined behavior. (in case of Mesa glViewport is apparently such a function, at least when running on Intel)

      This means anything using text rendering in a QQuickWidget may potentially crash when using EGL, depending on the drivers.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes